--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,7 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
+@inproceedings{oneshot,
+  title={One Shot Object Detection Without Finetuning},
+  author={Xiang Li*, Lin Zhang*, Yau-Pun Chen, Yu-Wing Tai, Chi-Keung Tang},
+  booktitle={In submission to CVPR},
+  year={2019},
   organization={IEEE}
 }
