--- a/content/publication/one-shot-paper/cite.bib
+++ b/content/publication/one-shot-paper/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{oneshot,
   title={One Shot Object Detection Without Finetuning},
   author={Xiang Li*, Lin Zhang*, Yau-Pun Chen, Yu-Wing Tai, Chi-Keung Tang},
-  booktitle={In submission to CVPR},
+  booktitle={In submission},
   year={2019},
   organization={IEEE}
 }
